@@ -1,3 +1,8 @@
+2002-01-21  Anders Carlsson  <andersca@gnu.org>
+
+	* control/control.c (create_form): Use a GtkTreeView instead of a
+	clist.
+
 2002-01-21  Richard Hestilow  <hestilow@ximian.com>
 
 	* Complete rewrite.
